# audiobook-cleaner-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_STATE.md  README.md  agent.md  agent_layer.yaml  agent_tools.yaml  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
apps/: __init__.py
config/: text_normalization.example.yaml
docs/: AGENT_LAYER_AUDIT.md  AGENT_REPORTING.md  AGENT_ROADMAP.md  AGENT_RUNBOOK.md  AGENT_SAFETY.md  ALIGNMENT_STRATEGY.md  ASR_STRATEGY.md  AUDIO_EDITING_STRATEGY.md  CODEX_HANDOFF.md  CODEX_USAGE.md  COST_CONTROL.md  DATA_MODEL.md  FEEDBACK_LOOP.md  LLM_CUT_DECISION_PROTOCOL.md  MCP_AUDIT.md  MCP_REUSE_GUIDE.md  MCP_SETUP.md  MCP_TROUBLESHOOTING.md  PIPELINE_DESIGN.md  PROJECT_VISION.md  PROMPTS.md  RESEARCH_NOTES.md  SEARCH_POLICY.md  STAGE_ROADMAP.md  TEXT_NORMALIZATION_RULES.md  TOOL_INVENTORY.md  TOOL_USAGE_POLICY.md  UI_DESIGN.md  USER_VIEW_TESTING.md  agent-browser-verification.md  cursor_browser_ui_runbook.md  cursor_tool_registry_check.md  project_experience_discovery_report.md
reports/: agent_audit_log.jsonl  gate_result.json  latest-agent-report.json  tool_probe_report.json
rounds/: round-00-bootstrap.md  round-01-import-manifest.md  round-02-asr-baseline.md  round-03-text-normalization.md  round-04-alignment.md  round-05-llm-cut-decision.md  round-06-review-ui-mvp.md  round-07-waveform-editor.md  round-08-ffmpeg-export.md  round-09-feedback-loop.md  round-10-batch-processing.md  round-11-local-runner.md  round-13-autonomous-real-api-r1.md  round-14-autonomous-dev-loop.md  (+1 more)
(+97 files in other folders)
