[project]
name = "audiobook-cleaner-lab"
version = "0.0.1"
description = "个人有声书音频清洗与文本对齐剪辑工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "audiobook-cleaner-lab maintainer" }]

# Round 00 仅声明占位依赖，后续 Round 逐步引入
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]
