[project]
name = "audiobook-cleaner-lab"
version = "0.0.1"
description = "个人有声书音频清洗与文本对齐剪辑工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "audiobook-cleaner-lab maintainer" }]

# Round 06 起引入 FastAPI；未安装时 check_repo 与纯 Python 测试仍可通过
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]
